Update canonical and OG URL in index.html

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         };
 
     </script>
-    <link rel="canonical" href="http://preview.ldpdemo.com/68e1b6622b6d4c002d4d3828" />
-    <meta property="og:url" content="http://preview.ldpdemo.com/68e1b6622b6d4c002d4d3828" />
+    <link rel="canonical" href="https://tuan-anh-tran-nguyet.vercel.app/" />
+    <meta property="og:url" content="https://tuan-anh-tran-nguyet.vercel.app/" />
     <meta property="og:title" content="LỄ CƯỚI TUẤN ANH  VÀ TRẦN NGUYỆT" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://sf-static.upanhlaylink.com/img/image_202602087a8d74d32513c3a42d321632fd6a2832.jpg">
