--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         };
 
     </script>
-    <link rel="canonical" href="https://tuan-anh-tran-nguyet.vercel.app/" />
-    <meta property="og:url" content="https://tuan-anh-tran-nguyet.vercel.app/" />
+    <link rel="canonical" href="https://thiep-cuoi-mdat.online/TuanAnh-TranNguyet/" />
+    <meta property="og:url" content="https://thiep-cuoi-mdat.online/TuanAnh-TranNguyet/" />
     <meta property="og:title" content="LỄ CƯỚI TUẤN ANH  VÀ TRẦN NGUYỆT" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://sf-static.upanhlaylink.com/img/image_202602087a8d74d32513c3a42d321632fd6a2832.jpg">
