Update image links and address formats in index.html

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     <meta property="og:url" content="" />
     <meta property="og:title" content="LỄ CƯỚI TUẤN ANH  VÀ TRẦN NGUYỆT" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://sf-static.upanhlaylink.com/img/image_202602087a8d74d32513c3a42d321632fd6a2832.jpg">
+    <meta property="og:image" content="https://sf-static.upanhlaylink.com/img/image_20260208f14562fbe6a4a4fb4700e3926d86cf1b.jpg">
     <meta property="og:description" content="LỄ CƯỚI TUẤN ANH  VÀ TRẦN NGUYỆT TRÂN TRỌNG KÍNH MỜI !!!" />
     <meta name="format-detection" content="telephone=no" />
-    <link rel="icon" type="image/x-icon" href="https://sf-static.upanhlaylink.com/img/image_202602087a8d74d32513c3a42d321632fd6a2832.jpg" />
-    <link rel="shortcut icon" href="https://sf-static.upanhlaylink.com/img/image_202602087a8d74d32513c3a42d321632fd6a2832.jpg" />
-    <link rel="apple-touch-icon" href="https://sf-static.upanhlaylink.com/img/image_202602087a8d74d32513c3a42d321632fd6a2832.jpg" />
-    <link rel="apple-touch-icon-precomposed" href="https://sf-static.upanhlaylink.com/img/image_202602087a8d74d32513c3a42d321632fd6a2832.jpg" />
-    <meta name="msapplication-TileImage" content="https://sf-static.upanhlaylink.com/img/image_202602087a8d74d32513c3a42d321632fd6a2832.jpg" />
+    <link rel="icon" type="image/x-icon" href="https://sf-static.upanhlaylink.com/img/image_20260208f14562fbe6a4a4fb4700e3926d86cf1b.jpg" />
+    <link rel="shortcut icon" href="https://sf-static.upanhlaylink.com/img/image_20260208f14562fbe6a4a4fb4700e3926d86cf1b.jpg" />
+    <link rel="apple-touch-icon" href="https://sf-static.upanhlaylink.com/img/image_20260208f14562fbe6a4a4fb4700e3926d86cf1b.jpg" />
+    <link rel="apple-touch-icon-precomposed" href="https://sf-static.upanhlaylink.com/img/image_20260208f14562fbe6a4a4fb4700e3926d86cf1b.jpg" />
+    <meta name="msapplication-TileImage" content="https://sf-static.upanhlaylink.com/img/image_20260208f14562fbe6a4a4fb4700e3926d86cf1b.jpg" />
     <meta name="revisit-after" content="days" />
     <link rel="dns-prefetch">
     <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
@@ -6166,11 +6166,11 @@
                 <div id="HEADLINE23" class='ladi-element'>
                     <h1 class='ladi-headline'>NHÀ TRAI</h1> </div>
                 <div id="HEADLINE24" class='ladi-element'>
-                    <h1 class='ladi-headline'>Số 5 - Sen Phương 7 - Phúc Lộc<br>Thành Phố Hà Nội</h1> </div>
+                    <h1 class='ladi-headline'>Nhà số 05 - Sen Phương 7 - Phúc Lộc<br>Thành Phố Hà Nội</h1> </div>
                 <div id="HEADLINE29" class='ladi-element'>
                     <h1 class='ladi-headline'>NHÀ GÁI</h1> </div>
                 <div id="HEADLINE30" class='ladi-element'>
-                    <h1 class='ladi-headline'>Số 5 - Nam Hà 4 - Phúc Lộc<br>Thành Phố Hà Nội</h1> </div>
+                    <h1 class='ladi-headline'>Nhà số 05 - Nam Hà 4 - Phúc Lộc<br>Thành Phố Hà Nội</h1> </div>
                 <div id="HEADLINE31" class='ladi-element'>
                     <h1 class='ladi-headline'>Cô Dâu</h1> </div>
                 <div id="HEADLINE32" class='ladi-element'>
@@ -6296,7 +6296,7 @@
                 <div id="HEADLINE40" class='ladi-element'>
                     <h3 class='ladi-headline'>Tại Tư Gia Nhà Trai&nbsp;</h3> </div>
                 <div id="HEADLINE41" class='ladi-element'>
-                    <h1 class='ladi-headline'>Nhà số 5 - Thôn Sen Phương 7 - Xã Phúc Lộc<br>&nbsp;Thành Phố Hà Nội</h1> </div>
+                    <h1 class='ladi-headline'>Nhà số 05 - Thôn Sen Phương 7 - Xã Phúc Lộc<br>&nbsp;Thành Phố Hà Nội</h1> </div>
                 <div data-action="true" id="BUTTON5" class='ladi-element'>
                     <div class='ladi-button ladi-transition'>
                         <div class="ladi-button-background"></div>
@@ -6375,7 +6375,7 @@
                 <div id="HEADLINE106" class='ladi-element'>
                     <h3 class='ladi-headline'>Tại Tư Gia Nhà Gái&nbsp;</h3> </div>
                 <div id="HEADLINE107" class='ladi-element'>
-                    <h1 class='ladi-headline'>Nhà số 5 - Thôn Nam Hà 4 - Xã Phúc Lộc<br>&nbsp;Thành Phố Hà Nội</h1> </div>
+                    <h1 class='ladi-headline'>Nhà số 05 - Thôn Nam Hà 4 - Xã Phúc Lộc<br>&nbsp;Thành Phố Hà Nội</h1> </div>
                 <div data-action="true" id="BUTTON31" class='ladi-element'>
                     <div class='ladi-button ladi-transition'>
                         <div class="ladi-button-background"></div>
@@ -6497,7 +6497,7 @@
                 <div id="HEADLINE75" class='ladi-element'>
                     <h2 class='ladi-headline'>Nhà Trai</h2> </div>
                 <div id="HEADLINE78" class='ladi-element'>
-                    <h1 class='ladi-headline'>Nhà số 5 - Thôn Nam Hà 4 - Xã Phúc Lộc&nbsp;<br>Thành Phố Hà Nội<br></h1> </div>
+                    <h1 class='ladi-headline'>Nhà số 05 - Thôn Nam Hà 4 - Xã Phúc Lộc&nbsp;<br>Thành Phố Hà Nội<br></h1> </div>
                 <a href="https://maps.app.goo.gl/z4S2anhyVfipnXd66" target="_blank" id="BUTTON14" class='ladi-element'>
                     <div class='ladi-button'>
                         <div class="ladi-button-background"></div>
@@ -6532,7 +6532,7 @@
                     </div>
                 </a>
                 <div id="HEADLINE77" class='ladi-element'>
-                    <h1 class='ladi-headline'>Nhà số 5 - Thôn Sen Phương 7 - Xã Phúc Lộc&nbsp;<br>&nbsp;Thành Phố Hà Nội</h1> </div>
+                    <h1 class='ladi-headline'>Nhà số 05 - Thôn Sen Phương 7 - Xã Phúc Lộc&nbsp;<br>&nbsp;Thành Phố Hà Nội</h1> </div>
                 <div id="HEADLINE79" class='ladi-element'>
                     <h2 class='ladi-headline'>Tuấn Anh 💖 Trần Nguyệt</h2> </div>
                 <div id="HEADLINE114" class='ladi-element'>
@@ -7547,7 +7547,7 @@ document.addEventListener("DOMContentLoaded", function () {
 </script>
 
 <audio id="bgMusic" preload="auto" loop>
-    <source src="https://raw.githubusercontent.com/phimanhdat/Manh-Dat/main/minhanh.mp3" type="audio/mpeg">
+    <source src="https://raw.githubusercontent.com/phimanhdat/Manh-Dat/main/(19)%20Stephen%20Sanchez%20-%20Until%20I%20Found%20You%20(Official%20Video)%20-%20YouTube.mp3" type="audio/mpeg">
 </audio>
 
 <script>
