--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Expires" content="-1">
-    <meta name="keywords" content="ĐÁM CƯỚI HUY HOÀNG  VÀ HỒNG NHUNG">
-    <meta name="description" content="LỄ CƯỚI TUẤN ANH  VÀ TRẦN NGUYỆT TRÂN TRỌNG KÍNH MỜI !!!">
+    <meta name="keywords" content="LỄ CƯỚI TUẤN ANH VÀ TRẦN NGUYỆT">
+    <meta name="description" content="LỄ CƯỚI TUẤN ANH VÀ TRẦN NGUYỆT TRÂN TRỌNG KÍNH MỜI !!!">
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <script type='text/javascript'>
         window.ladi_viewport = function (b) {
