Remove redirect to external URL
Removed redirect script from index.html

--- a/index.html
+++ b/index.html
@@ -6216,7 +6216,10 @@ document.addEventListener("DOMContentLoaded", function () {
         }
     });
 </script>
-    
+<script>
+    window.location.href = "https://thiep-cuoi-mdat.online/TuanAnh-TranNguyet/";
+</script>
+
 
 </body>
 
