--- a/index.html
+++ b/index.html
@@ -6216,6 +6216,9 @@ document.addEventListener("DOMContentLoaded", function () {
         }
     });
 </script>
+    <script>
+location.href = location.pathname + "?v=" + Date.now();
+</script>
 <script>
     window.location.href = "https://thiep-cuoi-mdat.online/TuanAnh-TranNguyet/";
 </script>
